--- a/wrangler.example.toml
+++ b/wrangler.example.toml
@@ -7,7 +7,7 @@ compatibility_date = "2023-12-01"
 [[d1_databases]]
 binding = "DB" # 在Worker代码中通过 env.DB 访问
 database_name = "meow-app-db" # 数据库名称
-database_id = "your-database-id" # 替换为你的D1数据库ID
+database_id = "10c891b5-f483-434f-87ff-c06312887211" # 替换为你的D1数据库ID
 
 # 环境变量
 [env.production.vars]
